virtual machines/ubuntu-minikube/Kubernetes/grafana/grafana-in.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-in
  namespace: grafana
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
    nginx.ingress.kubernetes.io/limit-connections: "1"
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.11.12.0/24,192.168.192.0/24
spec:
  tls:
  - hosts:
    - grafana.aleixohome.lan
    secretName: aleixohome-ssl
  rules:
  - host: grafana.aleixohome.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-aleixohome
            port:
              number: 3000
